Allow modelers to set the oracle